--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 /*
 Author: Darwin Pena Cabrera
-Date: 12/02/2025
+Date: 12/21/2025
 File name: style.css
 */
 
 /* css reset */
-body, header, nav, main, footer, img, h1, h3, ul {
+body, header, nav, main, footer, img, h1, h3, ul, aside, figure, figcaption{
 margin: 0;
 padding: 0;
 border: 0;
@@ -13,20 +13,20 @@ border: 0;
 
 /*Style rules for body and images*/
 body {
-  background-color: #f9cdf6;
+  background-color: #b164ff;
 }
 
-img {
+img, video {
   max-width: 100%;
   display: block;
 }
 /*Style rules for mobile viewport*/
 
 /*styles rules to show mobile class and hide tab-desk class*/
-.mobile {
+.mobile, .mobile-tablet {
   display: block;
 }
-.tab-desk {
+.tab-desk, .desktop {
   display: none;
 }
 
@@ -57,12 +57,11 @@ nav ul {
 }
 
 nav li {
-  display: inline-block;
   font-size: 1.5em;
   font-family: Geneva, Arial, sans-serif;
   font-weight: bold;
   display: block;
-  border-top: 0.5px solid #ff0019
+  border-top: 0.5px solid #f6e4f3;
 }
 
 nav li a {
@@ -83,6 +82,7 @@ main{
 
 main p {
   font-size: 1.25em;
+  text-align: center;
 }
 
 main h3 {
@@ -93,13 +93,59 @@ main ul {
   list-style-type: square;
 }
 
+.link {
+  color: #000000;
+  text-decoration: none;
+  font-weight: bold;
+  font-style: italic;
+}
+
+.action {
+  font-size: 1.75em;
+  font-weight: bold;
+  text-align: center;
+}
+
+.round {
+  border-radius: 6px;
+}
+
+aside {
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: bold;
+  text-shadow: 4px 4px 10px #ff8bd6;
+}
+
+figure {
+  border: 10px solid #ffffff;
+  box-shadow: 6px 6px 10px #ff8bd6;
+  max-width: 400px;
+  margin: 2% auto;
+}
+
+figcaption {
+  padding: 2%;
+  border-top: 4px solid #000000;
+  text-align: center;
+  font-weight: bold;
+}
+
+#info ul {
+  margin-left: 10%
+}
+
+#contact, h2 {
+  text-align: center;
+}
+
 
 /*Style rules for footer content*/
 footer {
   text-align: center;
   font-size: 0.85em;
   background-color: #000000;
-  color: #ffffff;
+  color: #f6eee4;
   padding-top: 1%;
   padding-bottom: 1%;
   padding-left: 0%;
@@ -107,7 +153,7 @@ footer {
 }
 
 footer a {
-  color: #ffffff;
+  color: #ff8bd6;
   text-decoration: none;
 }
 
@@ -127,43 +173,27 @@ footer a {
 nav li {
   border-top: none;
   display: inline-block;
-  font-size: 1.25em;
+  font-size: 1.5em;
 }
 
 nav li a {
   padding: 0.5em;
 }
+.grid {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 10px;
+}
 
-#love, #history {
+aside, main p {
+  grid-column: 1 / span 2;
+}
+ #love, #history {
   width: 45%;
   float: left;
   margin: 0 2%;
 }
-}
-/*Media Query for Large Desktop Viewports*/
 
-@media screen and (min-width: 1921px) {
-
-  body { 
-    background: linear-gradient(#f9cdf6, #ff0019); 
-    
-  }
-  #wrapper {
-    width: 1920px;
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  main {
-    background-color: #f9cdf6;
-  }
-
-  #love, #history {
-  width: 45%;
-  float: left;
-  margin: 0 2%;
-}
 }
 
 /*Media Query for Print*/
@@ -178,8 +208,15 @@ nav li a {
 /*Media Query for Desktop Viewport*/
 
 @media screen and (min-width: 1000px) {
-/*Desktop Viewport: Style rules for nav area*/
+/*Desktop Viewport: Show desktop class, hide mobile-tablet class*/
 
+.desktop {
+  display: block;
+}
+
+.mobile-tablet {
+  display: none;
+}
 nav li {
   font-size: 1.5em;
 }
@@ -192,20 +229,70 @@ nav li a {
 }
 
 nav li a:hover {
-  color:#000000;
-  background-color: #f9cdf6;
+  color:#2a1f14;
+  background-color: #ffffff;
+  opacity: 0.5;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 30px;
+}
+
+aside, main p {
+  grid-column: 1 / span 3;
+  font-size: 2em;
+}
 #love, #history {
   width: 45%;
   float: left;
   margin: 0 2%;
 }
-
-#love h1, #history h1{
-  text-align: center;
-}
-
+ main aside {
+    grid-column: 1 / -1;
+  }
+ 
 /*Desktop Viewport: Style rules for main content*/
 
+}
+
+/*Media Query for Large Desktop Viewports*/
+
+@media screen and (min-width: 1921px) {
+
+  .desktop {
+  display: block;
+  }
+  
+  body { 
+    background: linear-gradient(#baa9f4, #fe67d1); 
+    
+  }
+  #wrapper {
+    width: 1920px;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  main {
+    background-color: #ffffff;
+  }
+
+  .grid {
+  display: grid;
+  grid-template-columns: auto auto;
+  }
+
+  aside {
+    grid-column: 1 / span 2;
+    font-size: 3em;
+  }
+  #love, #history {
+  width: 45%;
+  float: left;
+  margin: 0 2%;
+}
+ 
 }
